# property-manager-app

./: README.md
webui/: pyproject.toml  requirements.txt
webui/webui/: constants.py
webui/webui/components/: chat.py  modal.py  navbar.py
